--- a/app/views/dm_core/admin/accounts/analytics.html.erb
+++ b/app/views/dm_core/admin/accounts/analytics.html.erb
@@ -1,29 +1,29 @@
-<% content_for :sidebar do %>
-  <%= render :partial => 'sidebar' %>
-<% end %>
+<%= render :partial => 'settings_menu' %>
 
-<%= simple_form_for(@account, :url => dm_core.admin_account_analytics_url) do |f| %>
+<%= simple_form_for(@account, :url => dm_core.admin_account_analytics_url,
+    html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings) do |f| %>
+
   <%= f.error_notification :message => "Please review the problems below"%>
 
-	<%= content_box :title => 'Analytics and Payment Configuration' do %>
+  <%= panel title: 'Analytics and Payment Configuration' do %>
 
-    <%= well_frame title: 'Google Analytics' do %>
+    <%= subsection title: 'Google Analytics', icon: 'icon-stack' do %>
       <%= f.input :preferred_google_analytics_tracker_id, :label => 'Tracker ID' %>
     <% end %>
     
-    <%= well_frame title: 'PayPal' do %>
+    <%= subsection title: 'PayPal', icon: 'icon-stack' do %>
       <%= f.input :preferred_paypal_merchant_id, :label => 'Merchant ID' %>
       <%= f.input :preferred_paypal_cert_id, :label => 'Cert ID' %>
     <% end %>
 
-    <%= well_frame title: 'Sofort (sofort.com)' do %>
+    <%= subsection title: 'Sofort (sofort.com)', icon: 'icon-stack' do %>
       <%= f.input :preferred_sofort_user_id, :label => 'User ID' %>
       <%= f.input :preferred_sofort_project_id, :label => 'Project ID' %>
       <%= f.input :preferred_sofort_project_password, :label => 'Project Password' %>
       <%= f.input :preferred_sofort_notification_password, :label => 'Notification Password' %>
     <% end %>
 
-    <%= well_frame title: 'Subscription Processor' do %>
+    <%= subsection title: 'Subscription Processor', icon: 'icon-stack' do %>
       <%= f.input :preferred_subscription_processor, label: 'Use', collection: ['paymill', 'stripe'], include_blank: true,
                   hint: 'Used only for subscriber content. DO NOT set or change this unless you know what you are doing' %>
       <%= f.input :preferred_subscription_bcc_email, label: 'Email bcc', include_blank: true,
