--- a/app/views/dm_core/admin/accounts/metadata.html.erb
+++ b/app/views/dm_core/admin/accounts/metadata.html.erb
@@ -1,11 +1,11 @@
-<% content_for :sidebar do %>
-  <%= render :partial => 'sidebar' %>
-<% end %>
+<%= render :partial => 'settings_menu' %>
 
-<%= simple_form_for(@account, :url => dm_core.admin_account_metadata_url) do |f| %>
+<%= simple_form_for(@account, url: dm_core.admin_account_metadata_url,
+    html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings) do |f| %>
+
   <%= f.error_notification :message => "Please review the problems below"%>
 
-	<%= content_box :title => 'Site Wide Metadata Settings' do %>
+	<%= panel title: 'Site Wide Metadata Settings' do %>
 
     <%= f.input :preferred_site_title,        label: 'Site Title', required: true %>
     <%= f.input :preferred_site_keywords,     label: 'Site Keywords', hint: 'Keywords embedded into each page (meta name="keywords")' %>
