--- a/app/views/dm_core/admin/users/_form.html.erb
+++ b/app/views/dm_core/admin/users/_form.html.erb
@@ -1,7 +1,9 @@
-<%= simple_form_for(@user, :url => dm_core.admin_user_path) do |f| %>
-  <%= f.error_notification :message => "<p>Please review the problems below</p>"%>
+<%= simple_form_for(@user, :url => dm_core.admin_user_path,
+html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings) do |f| %>
 
-	<%= content_frame :title => @title do %>
+  <%= f.error_notification :message => "Please review the problems below" %>
+
+	<%= panel title: @title do %>
     
     <%#= f.input :first_name %>
     <%#= f.input :last_name %>
