--- a/core/app/views/dm_core/admin/accounts/general.html.erb
+++ b/core/app/views/dm_core/admin/accounts/general.html.erb
@@ -1,11 +1,10 @@
-<% content_for :sidebar do %>
-  <%= render :partial => 'sidebar' %>
-<% end %>
+<%= render :partial => 'settings_menu' %>
 
-<%= simple_form_for(@account, :url => dm_core.admin_account_general_url) do |f| %>
+<%= simple_form_for(@account, :url => dm_core.admin_account_general_url, 
+  html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings) do |f| %>
   <%= f.error_notification :message => "Please review the problems below"%>
 
-	<%= content_box :title => 'General Settings' do %>
+  <%= panel :title => 'General Settings' do %>
 
     <%= f.input :domain, :required => true %>
     <%= f.input :account_prefix, :required => true %>
@@ -13,10 +12,10 @@
     <%= f.input :contact_email %>
     <%= f.input :preferred_default_locale, :required => true, :label => 'Default Locale'%>  
     <%= f.input :preferred_locales, :required => true, :label => 'Supported Locales', :hint => "Comma seperated. Ex: 'en, de'" %>  
-    <%= f.input :preferred_ssl_enabled, :as => :toggle, :label => 'Enable SSL?' %>
-    <%= f.input :preferred_site_enabled, :as => :toggle, :label => 'Publish Site?' %>
+    <%= f.input :preferred_ssl_enabled, :as => :boolean, :label => 'Enable SSL?' %>
+    <%= f.input :preferred_site_enabled, :as => :boolean, :label => 'Publish Site?' %>
 
     <%= submit_or_cancel :cancel_url => dm_core.admin_account_general_path %>
 
-	<% end %>
+  <% end %>
 <% end %>
