--- a/core/app/views/dm_core/admin/users/index.html.erb
+++ b/core/app/views/dm_core/admin/users/index.html.erb
@@ -1,6 +1,18 @@
-<%= content_frame :title => 'Users' do %>
-  <div class="table-overflow">
-    <table id="user_table" class="table table-striped table-bordered table-block" data-source="<%= dm_core.admin_users_url %>">
+<% content_for :content_title_extra do %>
+  <div class="header-bar-stats">
+    <div class="collapse" id="header-bar-stats">
+      <div class="well">
+        <ul class="page-stats">
+          <li><%= render partial: 'dm_core/admin/shared/header_stats_new_users' %></li>
+          <li><%= render partial: 'dm_core/admin/shared/header_stats_user_activity' %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+<% end %>
+<%= panel title: 'Users', body: false do %>
+  <div class="datatable">
+    <table id="user_table" class="table table-striped table-condensed table-bordered" data-source="<%= dm_core.admin_users_url %>">
       <thead>
         <tr>
           <th width="40"></th>
@@ -15,10 +27,4 @@
       </tbody>
     </table>
   </div>
-<% end %>
-
-<% content_for :sidebar do %>
-
-  <%= render partial: 'dm_core/admin/dashboard/widget_sidebar_user_stats' %>
-  
 <% end %>
