--- a/cms/app/views/dm_cms/admin/cms_blogs/index.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/index.html.erb
@@ -5,7 +5,7 @@
   </ul></div>
 <% end %>
 
-<%= content_frame  do %>
+<%= panel  do %>
   <div class="table-overflow">
     <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%= dm_cms.admin_cms_blog_sort_path %>">
       <thead>
