--- a/core/app/views/dm_core/admin/shared/_modal_dialog.html.erb
+++ b/core/app/views/dm_core/admin/shared/_modal_dialog.html.erb
@@ -1,18 +1,22 @@
-<div class="modal hide fade" id="<%= options[:id] %>" tabindex="-1" role="dialog" aria-labelledby="<% "#{options[:id]}_title" %>" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h5 id="<% "#{options[:id]}_title" %>"><%= options[:title] %></h5>
-  </div>
-  <div class="modal-body">
-    <%= content %>
-  </div>
-  <div class="modal-footer">
-    <% if options[:delete_url] %>
-      <%= link_to "Delete", options[:delete_url], method: :delete, data: { confirm: options[:delete_msg] }, title: 'Delete', class: "btn btn-danger", style: 'float:left' %>
-    <% end %>
-    <button type="button" class="btn" data-dismiss="modal">Cancel</button>
-    <% if options[:include_save] %>
-      <button type="submit" class="btn btn-primary">Save</button>
-    <% end %>
+<div class="modal fade" id="<%= options[:id] %>" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="<% "#{options[:id]}_title" %>"><%= options[:title] %></h4>
+      </div>
+      <div class="modal-body with-padding">
+        <%= content %>
+      </div>
+      <div class="modal-footer">
+        <% if options[:delete_url] %>
+          <%= link_to "Delete", options[:delete_url], method: :delete, data: { confirm: options[:delete_msg] }, title: 'Delete', class: "btn btn-danger", style: 'float:left' %>
+        <% end %>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <% if options[:include_save] %>
+          <button type="submit" class="btn btn-primary">Save</button>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
